--- a/Лабораторные работы/54/1/1.html
+++ b/Лабораторные работы/54/1/1.html
@@ -14,7 +14,7 @@
     </style>
 </head>
 
-<body onload="main()">
+<body>
     <canvas id="mycanvas" width="535" height="360">
         Your browser does not support the HTML5 canvas element.
     </canvas>
