1. Обновление л.р.№2 для групп 51-52 2. Обновлена лекция 1

--- a/Лабораторные работы/51_52/2/2.html
+++ b/Лабораторные работы/51_52/2/2.html
@@ -14,14 +14,11 @@
     </style>
 </head>
  
-  <body onload="main()">
+  <body>
       <canvas id="mycanvas" width="400" height="400">
           Your browser does not support the HTML5 canvas element.
       </canvas>
 
-    <script src="../libs/webgl-utils.js"></script>
-    <script src="../libs/webgl-debug.js"></script>
-    <script src="../libs/cuon-utils.js"></script>
-    <script src="2.js"></script>
+    <script type="module" src="2.js"></script>
   </body>
 </html>
