--- a/Лабораторные работы/54/2/2.html
+++ b/Лабораторные работы/54/2/2.html
@@ -14,11 +14,11 @@
     </style>
 </head>
  
-  <body onload="main()">
+  <body>
       <canvas id="mycanvas" width="400" height="400">
           Your browser does not support the HTML5 canvas element.
       </canvas>
 
-    <script src="2.js"></script>
+    <script type="module" src="2.js"></script>
   </body>
 </html>
