--- a/Лабораторные работы/54/3/3.html
+++ b/Лабораторные работы/54/3/3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Лабораторная работа №2</title>
+    <title>Лабораторная работа №3</title>
     <style>
         body {
             background-color: gray;
@@ -14,10 +14,11 @@
     </style>
 </head>
  
-  <body onload="main()">
+  <body>
       <canvas id="mycanvas" width="400" height="400">
           Your browser does not support the HTML5 canvas element.
       </canvas>
-    <script src="3.js"></script>
+
+    <script type="module" src="3.js"></script>
   </body>
 </html>
