--- a/Лабораторные работы/54/4/4.html
+++ b/Лабораторные работы/54/4/4.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Лабораторная работа №1</title>
+    <title>Лабораторная работа №4</title>
     <style>
         body {
-            background-color: grey;
+            background-color: gray;
         }
 
         canvas {
@@ -13,11 +13,12 @@
         }
     </style>
 </head>
+ 
+  <body>
+      <canvas id="mycanvas" width="400" height="400">
+          Your browser does not support the HTML5 canvas element.
+      </canvas>
 
-<body onload="main()">
-    <canvas id="mycanvas" width="800" height="600">
-        Your browser does not support the HTML5 canvas element.
-    </canvas>
-    <script src="4.js"></script>
-</body>
+    <script type="module" src="4.js"></script>
+  </body>
 </html>
