Обновлена л.р.№6 для групп 51-52

--- a/Лабораторные работы/51_52/6/gl-matrix-test.html
+++ b/Лабораторные работы/51_52/6/gl-matrix-test.html
@@ -4,7 +4,7 @@
 <title>Test of glMatrix JavaScript Library</title>
 <script type="module">
 	
-import {vec3, mat4} from './libs/dist/esm/index.js';
+import {vec3, mat4} from 'https://cdn.jsdelivr.net/npm/gl-matrix@3.4.4/+esm';
 
 function testglMatrixJsLibrary() {
     const u = vec3.fromValues(1, 2, 3);
