--- a/Лабораторные работы/54/5/5.html
+++ b/Лабораторные работы/54/5/5.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
-<head>
+  <head>
+    <meta charset="utf-8" />
     <title>Лабораторная работа №5</title>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-        }
-    </style>
-</head>
-<body">
+  </head>
+
+  <body">
+    <canvas id="mycanvas" width="400" height="400">
+    Please use a browser that supports "canvas"
+    </canvas>
+
     <script type="module" src="5.js"></script>
-</body>
+  </body>
 </html>
