--- a/Лабораторные работы/51_52/7/7.html
+++ b/Лабораторные работы/51_52/7/7.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <title>Лабораторная работа №4</title>
+    <style>
+        body {
+            background-color: grey;
+        }
+
+        canvas {
+            background-color: white;
+        }
+    </style>
   </head>
 
   <body">
