--- a/Лабораторные работы/54/6/6.html
+++ b/Лабораторные работы/54/6/6.html
@@ -1,15 +1,13 @@
-<!DOCTYPE html>
 <html>
-<head>
-    <title>Лабораторная работа №7</title>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-        }
-    </style>
-</head>
-<body">
-    <script type="module" src="6.js"></script>
+<body>
+
+<h1>Ch06_ShinySphere</h1>
+
+<!-- Create the canvas -->
+<canvas id="canvas_example" width="400" height="400"></canvas>
+
+<!-- Execute the script code -->
+<script type="module" src="6.js"></script>
+
 </body>
-</html>
+</html> 
